--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        ...
+    <body>
+        <link rel="stylesheet" href="/assets/css/custom.css">
+    </body>
     </head>
     <body>
         {{ content }}
